# claude-orchestrator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.orchestrator/: README.md  config.json  roadmap.md  task.md  verify.md
.orchestrator/scheduled/: example-dependency-audit.md
crates/core/: Cargo.toml
crates/core/src/: config.rs  conventions.rs  engine.rs  error.rs  event.rs  git.rs  github.rs  lib.rs  models.rs  parse.rs  runner.rs  scheduled.rs  service.rs  util.rs  webhook.rs  worktree.rs
crates/core/src/agents/: claude.rs  codex.rs  gemini.rs  mod.rs
crates/core/src/db/: mod.rs  schema.sql  tests.rs
crates/core/src/templates/: README.md  config.json  roadmap.md  task.md  verify.md
docs/: ARCHITECTURE.md  CONVENTIONS.md  RELEASING.md
docs/schema/: project-config.json
scripts/: e2e.mjs  screenshot-mock.js  screenshot.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src/api/: index.ts  types.ts
src/components/: ActivityCenter.tsx  AgentComparison.tsx  Badges.tsx  BranchMaintenance.tsx  BulkTaskModal.tsx  CommandPalette.tsx  CostForecast.tsx  CreateTaskModal.tsx  GettingStarted.tsx  Layout.tsx  LogConsole.tsx  Logo.tsx  Markdown.tsx  Modal.tsx  ModelInput.tsx  NeedsAttention.tsx  NextUpQueue.tsx  Onboarding.tsx  ProjectAnalyticsPanel.tsx  ProjectHealth.tsx  ProjectMemoryPanel.tsx  SessionDiffPanel.tsx  Switch.tsx  TaskTable.tsx  ThemeToggle.tsx  ThroughputChart.tsx  UpcomingTasks.tsx  UpdateBanner.tsx  UsageAlertBanner.tsx  UsageBar.tsx
src/lib/: format.ts  notify.ts  theme.ts
src/store/: index.ts
src/styles/: index.css
src/views/: ActivityView.tsx  BoardView.tsx  DashboardView.tsx  DependencyGraphView.tsx  ProjectDetailView.tsx  ProjectsView.tsx  PullRequestsView.tsx  ScheduledView.tsx  SearchView.tsx  SessionDetailView.tsx  SettingsView.tsx  TaskDetailView.tsx  TasksView.tsx  TimelineView.tsx
