[package]
name = "orchestrator-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Platform-independent orchestration engine for Claude Orchestrator: data model, agent runners, the scheduling loop, and usage tracking. Contains no GUI/Tauri dependencies so it can be tested in isolation."

[lib]
name = "orchestrator_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs", "test-util"] }
